temporary fix for button disappearing pt 3

--- a/src/juego.html
+++ b/src/juego.html
@@ -191,13 +191,15 @@
                                 <p>Te recomiendo jugar con un mínimo de 3 equipos de al menos 4 personas cada uno y un máximo de 6 equipos de hasta 8 personas.</p>
                                 
                                 <div class="input-group">
-                                    <label for="" class="input-label">¿Con cuántos equipos quieres jugar?</label>
-                                    <input type="range" min="1" max="5" step="1" class="llama-input" id="number-of-teams">
+                                    <label for="" class="input-label input-element">¿Con cuántos equipos quieres jugar?</label>
+                                    <input type="range" min="1" max="5" step="1" class="llama-input input-element" id="number-of-teams">
+                                    <p class="input-number input-element" id="team-number"></p>
                                 </div>
 
                                 <div class="input-group">
-                                    <label for="" class="input-label">¿Cuántos jugadores hay en total?</label>
-                                    <input type="range" min="1" max="25" step="1" class="llama-input" id="number-of-roles">
+                                    <label for="" class="input-label input-element">¿Cuántos jugadores hay en total?</label>
+                                    <input type="range" min="1" max="25" step="1" class="llama-input input-element" id="number-of-roles">
+                                    <p class="input-number input-element" id="role-number"></p>
                                 </div>
 
                                 <div class="card-footer">
