--- a/src/juego.html
+++ b/src/juego.html
@@ -42,32 +42,48 @@
 
                         <div class="cards-container">
                             <div class="card-wrapper">
-                                <h4>Pensamiento crítico y resolución de problemas:</h4>
-                                <p>Analizarán situaciones complejas, identificarán problemas y generarán soluciones creativas y sostenibles.</p>
+                                <div class="guideline-container">
+                                    <h2 class="guidelines">Pensamiento crítico y resolución de problemas</h4>
+                                </div>
+                                <div class="guideline-description-container">
+                                    <p class="guideline-description">Analizarán situaciones complejas, identificarán problemas y generarán soluciones creativas y sostenibles.</p>
+                                </div>
                                 <div class="card-footer">
                                     <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
 
                             <div class="card-wrapper">
-                                <h4>Colaboración:</h4>
-                                <p>Aprenderán a trabajar en conjunto, compartiendo ideas y valorando la diversidad de perspectivas y opiniones.</p>
+                                <div class="guideline-container">
+                                    <h2 class="guidelines">Colaboración</h4>
+                                </div>
+                                <div class="guideline-description-container">
+                                    <p class="guideline-description">Aprenderán a trabajar en conjunto, compartiendo ideas y valorando la diversidad de perspectivas y opiniones.</p>
+                                </div>
                                 <div class="card-footer">
                                     <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
 
                             <div class="card-wrapper">
-                                <h4>Empatía:</h4>
-                                <p>El juego promueve la empatía, al colocar a lxs estudiantes en distintos roles con prioridades, intereses y preocupaciones específicas.</p>
+                                <div class="guideline-container">
+                                    <h2 class="guidelines">Empatía</h4>
+                                </div>
+                                <div class="guideline-description-container">
+                                    <p class="guideline-description">El juego promueve la empatía, al colocar a lxs estudiantes en distintos roles con prioridades, intereses y preocupaciones específicas.</p>
+                                </div>
                                 <div class="card-footer">
                                     <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
 
                             <div class="card-wrapper">
-                                <h4>Pensamiento creativo y codiseño:</h4>
-                                <p>Desarrollarán habilidades para idear posibles formas participativas de afrontar desafíos socioambientales complejos.</p>
+                                <div class="guideline-container">
+                                    <h2 class="guidelines">Pensamiento creativo y codiseño</h4>
+                                </div>
+                                <div class="guideline-description-container">
+                                    <p class="guideline-description">Desarrollarán habilidades para idear posibles formas participativas de afrontar desafíos socioambientales complejos.</p>
+                                </div>
                                 <div class="card-footer">
                                     <img src="brand/logo-short.svg" alt="A!">
                                 </div>
@@ -94,36 +110,52 @@
 
                         <div class="cards-container">
                             <div class="card-wrapper">
-                                <h4>Te recomiendo:</h4>
-                                <p>Jugar con un mínimo de 3 equipos de al menos 4 personas cada uno y un máximo de 6 equipos de hasta 8 personas, permitiendo entre 12 y 50 jugadorexs en total.</p>
+                                <div class="guideline-container">
+                                   <h2>Te recomiendo:</h4>
+                                </div>
+                                <div class="guideline-description-container">
+                                    <p>Jugar con un mínimo de 3 equipos de al menos 4 personas cada uno y un máximo de 6 equipos de hasta 8 personas, permitiendo entre 12 y 50 jugadorexs en total.</p>
+                                </div>
                                 <div class="card-footer">
                                     <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
 
                             <div class="card-wrapper">
-                                <h4>Para facilitar la colaboración:</h4>
-                                <p>Para facilitar la colaboración y el intercambio de ideas, cada equipo deberá ubicarse en una mesa.</p>
+                                <div class="guideline-container">
+                                    <h2 style="text-align: right;">Para facilitar la colaboración:</h4>
+                                </div>
+                                <div class="guideline-description-container">
+                                    <p>Para facilitar la colaboración y el intercambio de ideas, cada equipo deberá ubicarse en una mesa.</p>
+                                </div>
                                 <div class="card-footer">
                                     <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
 
                             <div class="card-wrapper">
-                                <h4>Edades:</h4>
-                                <p>Ansiudad está pensado para estudiantes de 12 años en adelante y puede adaptarse a grupos de diversas edades.</p>
+                                <div class="guideline-container">
+                                    <h2>Edades:</h4>
+                                </div>
+                                <div class="guideline-description-container">
+                                    <p>Ansiudad está pensado para estudiantes de 12 años en adelante y puede adaptarse a grupos de diversas edades.</p>
+                                </div>
                                 <div class="card-footer">
                                     <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
 
                             <div class="card-wrapper">
-                                <h4>Qué necesitas:</h4>
-                                <ul>
-                                    <li>Hojas blancas</li>
-                                    <li>Plumones</li>
-                                    <li>Pantalla o proyector</li>
-                                </ul>
+                                <div class="guideline-container">
+                                    <h2>Qué necesitas:</h4>
+                                </div>
+                                <div class="guideline-description-container">
+                                    <ul>
+                                        <li>Hojas blancas</li>
+                                        <li>Plumones</li>
+                                        <li>Pantalla o proyector</li>
+                                    </ul>
+                                </div>
                                 <div class="card-footer">
                                     <img src="brand/logo-short.svg" alt="A!">
                                 </div>
@@ -186,8 +218,8 @@
                         </header>
 
                         <div class="cards-container">
-                            <div class="card-wrapper">
-                                <h4>1. Equipos</h4>
+                            <div class="card-wrapper llama-input-cards">
+                                <h2>1. Equipos</h4>
                                 <p>Te recomiendo jugar con un mínimo de 3 equipos de al menos 4 personas cada uno y un máximo de 6 equipos de hasta 8 personas.</p>
                                 
                                 <div class="input-group">
@@ -207,8 +239,8 @@
                                 </div>
                             </div>
 
-                            <div class="card-wrapper">
-                                <h4>2. Incidentes</h4>
+                            <div class="card-wrapper llama-input-cards">
+                                <h2>2. Incidentes</h4>
                                 <p>Ansiudad será víctima de algunos incidentes inesperados. </p>
                                 <p>Puedo mostrarte un incidente de manera aleatoria o, si prefieres, puedes darme un tema (por ejemplo, movilidad o sistema de salud), y de esa forma podré mostrarte lo que nos depara el futuro.</p>
                                 <p>Escribe un tema o deja la casilla en blanco si quieres que sea aleatorio</p>
