--- a/src/index.html
+++ b/src/index.html
@@ -876,6 +876,6 @@ Date: 11-24
     </main>
     <!-- <script type="module" src="/js/gsap.min.js"></script> -->
     <script type="module" src="/js/menu.js"></script>
-    <script type="module" src="/js/index.js"></script>
+    <script async type="module" src="/index.js"></script>
   </body>
 </html>
