--- a/src/juego.html
+++ b/src/juego.html
@@ -405,7 +405,6 @@
 
     <canvas class="webgl"></canvas>
     <script type="module" src="js/menu.js"></script>
-    <script type="module" src="js/index.js"></script>
-    <script async type="module" src="./script.js"></script>
+    <script async type="module" src="/index.js"></script>
 </body>
 </html>
