adds vercel analytics

--- a/src/index.html
+++ b/src/index.html
@@ -874,8 +874,8 @@ Date: 11-24
         <p>2024</p>
       </section>
     </main>
-    <!-- <script type="module" src="/js/gsap.min.js"></script> -->
     <script type="module" src="/js/menu.js"></script>
     <script async type="module" src="/index.js"></script>
+    <script type="module" src="/script.js"></script>
   </body>
 </html>
