Adds Pacha-Llama gifs

--- a/src/juego.html
+++ b/src/juego.html
@@ -65,7 +65,7 @@
                     <div class="horizontalStackWrapper">
                         <header class="llama-intro">
                             <div class="portrait-wrapper">
-                                <img src="brand/llama-head.svg" alt="Pacha-Llama">
+                                <img src="brand/pachallama-closeup.gif" alt="Pacha-Llama">
                             </div>
 
                             <div class="text-wrapper">
@@ -133,7 +133,7 @@
                     <div class="horizontalStackWrapper">
                         <header class="llama-intro">
                             <div class="portrait-wrapper">
-                                <img src="brand/llama-head.svg" alt="Pacha-Llama">
+                                <img src="brand/pachallama-closeup.gif" alt="Pacha-Llama">
                             </div>
 
                             <div class="text-wrapper">
@@ -204,7 +204,7 @@
                 <div class="slideContainer" id="slide3">
                     <aside class="llama-instructions">
                         <div class="portrait-wrapper">
-                            <img src="brand/llama-head.svg" alt="Pacha-Llama">
+                            <img src="brand/pachallama-closeup.gif" alt="Pacha-Llama">
                         </div>
 
                         <div class="text-wrapper">
@@ -222,7 +222,7 @@
                 <div class="slideContainer" id="slide4">
                     <aside class="llama-instructions">
                         <div class="portrait-wrapper">
-                            <img src="brand/llama-head.svg" alt="Pacha-Llama">
+                            <img src="brand/pachallama-closeup.gif" alt="Pacha-Llama">
                         </div>
 
                         <div class="text-wrapper">
@@ -242,7 +242,7 @@
                     <div class="horizontalStackWrapper">
                         <header class="llama-intro">
                             <div class="portrait-wrapper">
-                                <img src="brand/llama-head.svg" alt="Pacha-Llama">
+                                <img src="brand/pachallama-closeup.gif" alt="Pacha-Llama">
                             </div>
 
                             <div class="text-wrapper" id="form-dialogue">
@@ -315,11 +315,8 @@
                         <main class="llama-wait">
                             <div class="text-wrapper">
                                 <h3 id="loading-title">Pacha-Llama está en un trance místico para encontrar el incidente perfecto para tu juego.</h3>
-                                <img src="brand/logo-loading.gif" alt="Ansiudad-Logo-Loading-Animation" id="loading-animation">
+                                <img src="brand/pachallama.gif" alt="Ansiudad-Logo-Loading-Animation" id="loading-animation">
                                 <p>Espera un momento...</p>
-                            </div>
-                            <div class="portrait-wrapper">
-                                <img src="brand/llama-head.svg" alt="Pacha-Llama">
                             </div>
                         </main>
                     </div>
@@ -329,7 +326,7 @@
                     <div class="leftToRightWrapper">
                         <aside class="llama-instructions">
                             <div class="portrait-wrapper">
-                                <img src="brand/llama-head.svg" alt="Pacha-Llama">
+                                <img src="brand/pachallama-closeup.gif" alt="Pacha-Llama">
                             </div>
 
                             <div class="text-wrapper">
@@ -370,7 +367,7 @@
 
             <aside id="llama-helper">
                 <div class="left-wrapper">
-                    <img src="brand/llama-head.svg" alt="Pacha-Llama">
+                    <img src="brand/pachallama-closeup.gif" alt="Pacha-Llama">
                 </div>
     
                 <div class="right-wrapper">
@@ -386,7 +383,7 @@
             <!-- HELPER for debugging steps -->
             <!-- <aside id="llama-helper">
                 <div class="left-wrapper">
-                    <img src="brand/llama-head.svg" alt="Pacha-Llama">
+                    <img src="brand/pachallama-closeup.gif" alt="Pacha-Llama">
                 </div>
     
                 <div class="right-wrapper">
