--- a/src/juego.html
+++ b/src/juego.html
@@ -58,7 +58,7 @@
             <div class="allSlidesContainer">
                 <div class="slideContainer" id="slide0">
                     <h1 style="display: none;">ANSIUDAD</h1>
-                    <img src="brand/animated-logo-white.gif" alt="Ansiudad logo">
+                    <img src="brand/animated-logo-white.gif" alt="Ansiudad logo" id="animated-logo">
                 </div>
                 
                 <div class="slideContainer" id="slide1">
