--- a/src/juego.html
+++ b/src/juego.html
@@ -204,7 +204,7 @@
                 <div class="slideContainer" id="slide3">
                     <aside class="llama-instructions">
                         <div class="portrait-wrapper">
-                            <img src="brand/pachallama-closeup.gif" alt="Pacha-Llama">
+                            <img src="brand/pachallama.gif" alt="Pacha-Llama">
                         </div>
 
                         <div class="text-wrapper">
@@ -222,7 +222,7 @@
                 <div class="slideContainer" id="slide4">
                     <aside class="llama-instructions">
                         <div class="portrait-wrapper">
-                            <img src="brand/pachallama-closeup.gif" alt="Pacha-Llama">
+                            <img src="brand/pachallama.gif" alt="Pacha-Llama">
                         </div>
 
                         <div class="text-wrapper">
@@ -234,7 +234,7 @@
 
                             <h3>¿Me ayudas?</h3>
 
-                            <button class="regular-btn goToNextStepBtn">Vamos a jugar! ></button>
+                            <button class="regular-btn goToNextStepBtn">¡Vamos a jugar!</button>
                         </div>
                     </aside>
                 </div>
@@ -306,7 +306,7 @@
                             </div> -->
                         </div>
 
-                        <button class="regular-btn goToNextStepBtn" id="submit">Listo, crea el incidente para jugar!</button>
+                        <button class="regular-btn goToNextStepBtn" id="submit">¡Listo, crea el incidente para jugar!</button>
                     </div>
                 </div>
 
