final changes before deadline

--- a/src/juego.html
+++ b/src/juego.html
@@ -57,8 +57,8 @@
         <article data-taxi-view id="juegoContainer" class="pageContainer">
             <div class="allSlidesContainer">
                 <div class="slideContainer" id="slide0">
-                    <!-- <h1 style="display: none;">ANSIUDAD</h1>
-                    <img src="brand/animated-logo-white.gif" alt="Ansiudad logo" id="animated-logo"> -->
+                    <h1 style="display: none;">ANSIUDAD</h1>
+                    <img src="brand/animated-logo-white.gif" alt="Ansiudad logo" id="animated-logo">
                 </div>
                 
                 <div class="slideContainer" id="slide1">
