CSS style tweaks to improve usability on small laptop screens

--- a/src/juego.html
+++ b/src/juego.html
@@ -57,8 +57,8 @@
         <article data-taxi-view id="juegoContainer" class="pageContainer">
             <div class="allSlidesContainer">
                 <div class="slideContainer" id="slide0">
-                    <h1 style="display: none;">ANSIUDAD</h1>
-                    <img src="brand/animated-logo-white.gif" alt="Ansiudad logo" id="animated-logo">
+                    <!-- <h1 style="display: none;">ANSIUDAD</h1>
+                    <img src="brand/animated-logo-white.gif" alt="Ansiudad logo" id="animated-logo"> -->
                 </div>
                 
                 <div class="slideContainer" id="slide1">
@@ -78,7 +78,7 @@
                         <div class="cards-container">
                             <div class="card-wrapper">
                                 <div class="guideline-container">
-                                    <h2 class="guidelines">Pensamiento crítico y resolución de problemas</h4>
+                                    <h2 class="guidelines">Pensamiento Crítico y Resolución de Problemas.</h2>
                                 </div>
                                 <div class="guideline-description-container">
                                     <p class="guideline-description">Analizarán situaciones complejas, identificarán problemas y generarán soluciones creativas y sostenibles.</p>
@@ -90,7 +90,7 @@
 
                             <div class="card-wrapper">
                                 <div class="guideline-container">
-                                    <h2 class="guidelines">Colaboración</h4>
+                                    <h2 class="guidelines">Colaboración.</h2>
                                 </div>
                                 <div class="guideline-description-container">
                                     <p class="guideline-description">Aprenderán a trabajar en conjunto, compartiendo ideas y valorando la diversidad de perspectivas y opiniones.</p>
@@ -102,7 +102,7 @@
 
                             <div class="card-wrapper">
                                 <div class="guideline-container">
-                                    <h2 class="guidelines">Empatía</h4>
+                                    <h2 class="guidelines">Empatía.</h2>
                                 </div>
                                 <div class="guideline-description-container">
                                     <p class="guideline-description">El juego promueve la empatía, al colocar a lxs estudiantes en distintos roles con prioridades, intereses y preocupaciones específicas.</p>
@@ -114,7 +114,7 @@
 
                             <div class="card-wrapper">
                                 <div class="guideline-container">
-                                    <h2 class="guidelines">Pensamiento creativo y codiseño</h4>
+                                    <h2 class="guidelines">Pensamiento Creativo y Codiseño.</h2>
                                 </div>
                                 <div class="guideline-description-container">
                                     <p class="guideline-description">Desarrollarán habilidades para idear posibles formas participativas de afrontar desafíos socioambientales complejos.</p>
@@ -146,7 +146,7 @@
                         <div class="cards-container">
                             <div class="card-wrapper">
                                 <div class="guideline-container">
-                                   <h2>Te recomiendo:</h4>
+                                   <h2>Te recomiendo:</h2>
                                 </div>
                                 <div class="guideline-description-container">
                                     <p>Jugar con un mínimo de 3 equipos de al menos 4 personas cada uno y un máximo de 6 equipos de hasta 8 personas, permitiendo entre 12 y 50 jugadorexs en total.</p>
@@ -158,7 +158,7 @@
 
                             <div class="card-wrapper">
                                 <div class="guideline-container">
-                                    <h2 style="text-align: right;">Para facilitar la colaboración:</h4>
+                                    <h2 style="text-align: right;">Para facilitar la colaboración:</h2>
                                 </div>
                                 <div class="guideline-description-container">
                                     <p>Para facilitar la colaboración y el intercambio de ideas, cada equipo deberá ubicarse en una mesa.</p>
@@ -170,7 +170,7 @@
 
                             <div class="card-wrapper">
                                 <div class="guideline-container">
-                                    <h2>Edades:</h4>
+                                    <h2>Edades:</h2>
                                 </div>
                                 <div class="guideline-description-container">
                                     <p>Ansiudad está pensado para estudiantes de 12 años en adelante y puede adaptarse a grupos de diversas edades.</p>
@@ -182,7 +182,7 @@
 
                             <div class="card-wrapper">
                                 <div class="guideline-container">
-                                    <h2>Qué necesitas:</h4>
+                                    <h2>Qué necesitas:</h2>
                                 </div>
                                 <div class="guideline-description-container">
                                     <ul>
@@ -254,7 +254,7 @@
 
                         <div class="cards-container">
                             <div class="card-wrapper llama-input-cards">
-                                <h2>1. Equipos</h4>
+                                <h2>1. Equipos</h2>
                                 <p>Te recomiendo jugar con un mínimo de 3 equipos de al menos 4 personas cada uno y un máximo de 6 equipos de hasta 8 personas.</p>
                                 
                                 <div class="input-group">
@@ -279,7 +279,7 @@
                             </div>
 
                             <div class="card-wrapper llama-input-cards">
-                                <h2>2. Incidentes</h4>
+                                <h2>2. Incidentes</h2>
                                 <p>Ansiudad será víctima de algunos incidentes inesperados. </p>
                                 <p>Puedo mostrarte un incidente de manera aleatoria o, si prefieres, puedes darme un tema (por ejemplo, movilidad o sistema de salud), y de esa forma podré mostrarte lo que nos depara el futuro.</p>
                                 <p>Escribe un tema o deja la casilla en blanco si quieres que sea aleatorio</p>
@@ -380,6 +380,8 @@
                         <p>Ansiudad es una herramienta educativa creada para fomentar conversaciones en torno al diseño social a través del juego.</p>
 
                         <button class="regular-btn submitBtn" id="firstStepBtn">Continuar ></button>
+
+                        <img class="isologo" src="brand/logo-short.svg" alt="A!">
                     </div>
                 </div>
             </aside>
