Refactorizacion del slide con inputs para hacer el prompt de Llama, el layout es de 3 columnas para no necesitar hacer scroll aun en pantallas pequeñas. Mejoras leves en el CSS del slide del tunel mientras esperamos a Llama

--- a/src/juego.html
+++ b/src/juego.html
@@ -238,22 +238,25 @@
                         </div>
                     </aside>
                 </div>
+
                 <div class="slideContainer" id="slide5">
-                    <div class="horizontalStackWrapper">
-                        <header class="llama-intro">
+                    <div class="leftToRightWrapper">
+                        <aside class="llama-instructions">
                             <div class="portrait-wrapper">
-                                <img src="brand/pachallama-closeup.gif" alt="Pacha-Llama">
+                                <img src="brand/pachallama.gif" alt="Pacha-Llama">
                             </div>
 
-                            <div class="text-wrapper" id="form-dialogue">
-                                <h3>¡Genial!</h3>
+                            <div class="text-wrapper">
+                                <h2>¡Genial!</h2>
 
-                                <p>Ahora necesito que me ayudes a entender algunas cosas antes de empezar a jugar:</p>
+                                <p>Ahora necesito que me ayudes a entender algunas cosas antes de empezar a jugar, lee las instrucciones y cuando estés listo presiona el botón debajo:</p>
+
+                                <button class="regular-btn goToNextStepBtn" id="submit">¡Listo!<br><br>¡Crea el incidente para jugar!</button>
                             </div>
-                        </header>
+                        </aside>
 
-                        <div class="cards-container">
-                            <div class="card-wrapper llama-input-cards">
+                        <div class="cards-container fitHeight">
+                            <div class="card-wrapper fitHeight llama-input-cards">
                                 <h2>1. Equipos</h2>
                                 <p>Te recomiendo jugar con un mínimo de 3 equipos de al menos 4 personas cada uno y un máximo de 6 equipos de hasta 8 personas.</p>
                                 
@@ -278,7 +281,7 @@
                                 </div>
                             </div>
 
-                            <div class="card-wrapper llama-input-cards">
+                            <div class="card-wrapper fitHeight llama-input-cards">
                                 <h2>2. Incidentes</h2>
                                 <p>Ansiudad será víctima de algunos incidentes inesperados. </p>
                                 <p>Puedo mostrarte un incidente de manera aleatoria o, si prefieres, puedes darme un tema (por ejemplo, movilidad o sistema de salud), y de esa forma podré mostrarte lo que nos depara el futuro.</p>
@@ -294,7 +297,7 @@
                                 </div>
                             </div>
 
-                            <!-- <div class="card-wrapper">
+                            <!-- <div class="card-wrapper fitHeight">
                                 <h4>3. Roles</h4>
                                 <p>Asignaré a cada jugador un rol con intereses únicos que deberá considerar y proteger en relación con los demás integrantes.</p>
                                 <p>Ayúdame a colocar los nombres de tus jugadores. Separados por una coma:</p>
@@ -309,8 +312,6 @@
                                 </div>
                             </div> -->
                         </div>
-
-                        <button class="regular-btn goToNextStepBtn" id="submit">¡Listo, crea el incidente para jugar!</button>
                     </div>
                 </div>
 
