Llama-response cards containers: mejoras para que contengan la respuesta sin importar el largo y que el scroll suceda dentro de la tarjeta y no en toda la pagina

--- a/src/juego.html
+++ b/src/juego.html
@@ -257,7 +257,9 @@
 
                         <div class="cards-container fitHeight">
                             <div class="card-wrapper fitHeight llama-input-cards">
-                                <h2>1. Equipos</h2>
+                                <div class="guideline-container">
+                                    <h2>1. Equipos</h2>
+                                </div>
                                 <p>Te recomiendo jugar con un mínimo de 3 equipos de al menos 4 personas cada uno y un máximo de 6 equipos de hasta 8 personas.</p>
                                 
                                 <div class="input-group">
@@ -282,7 +284,9 @@
                             </div>
 
                             <div class="card-wrapper fitHeight llama-input-cards">
-                                <h2>2. Incidentes</h2>
+                                <div class="guideline-container">
+                                    <h2>2. Incidentes</h2>
+                                </div>
                                 <p>Ansiudad será víctima de algunos incidentes inesperados. </p>
                                 <p>Puedo mostrarte un incidente de manera aleatoria o, si prefieres, puedes darme un tema (por ejemplo, movilidad o sistema de salud), y de esa forma podré mostrarte lo que nos depara el futuro.</p>
                                 <p>Escribe un tema o deja la casilla en blanco si quieres que sea aleatorio</p>
@@ -348,17 +352,39 @@
                         </aside>
 
                         <div class="cards-container fitHeight">
-                            <div class="card-wrapper fitHeight">
-                                <h4>1. Incidente</h4>
-                                <div id="llama-event" class="llama-response"></div>
+                            <div class="card-wrapper fitHeight llama-input-cards">
+                                <div class="guideline-container">
+                                    <h2>1. Incidente</h2>
+                                </div>
+                                <div id="llama-event" class="llama-response">
+                                    <h1>False title</h1>
+                                    <h2>False subtitle</h2>
+                                    <p>False body Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                                    <p>False body Temporibus tempora id error facere tenetur eaque dolore sit! At dicta necessitatibus modi laborum molestias velit quos, odit eius.</p>
+                                    <p>Facilis magni iusto!</p>
+                                </div>
                                 <div class="card-footer">
                                     <img src="brand/logo-short.svg" alt="A!">
                                 </div>
                             </div>
                             
-                            <div class="card-wrapper fitHeight">
-                                <h4>2. Roles</h4>
-                                <div id="llama-roles" class="llama-response">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque repellendus nisi, dolore earum exercitationem a, nemo vero, maxime veniam libero at beatae vel est perspiciatis nihil laboriosam incidunt sequi adipisci?</div>
+                            <div class="card-wrapper fitHeight llama-input-cards">
+                                <div class="guideline-container">
+                                    <h2>2. Roles</h2>
+                                </div>
+                                <div id="llama-roles" class="llama-response">
+                                    <h1>False title</h1>
+                                    <h2>False subtitle</h2>
+                                    <p>False body Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                                    <p>False body Temporibus tempora id error facere tenetur eaque dolore sit! At dicta necessitatibus modi laborum molestias velit quos, odit eius.</p>
+                                    <p>Facilis magni iusto!</p>
+                                    <p>False body Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                                    <p>False body Temporibus tempora id error facere tenetur eaque dolore sit! At dicta necessitatibus modi laborum molestias velit quos, odit eius.</p>
+                                    <p>Facilis magni iusto!</p>
+                                    <p>False body Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                                    <p>False body Temporibus tempora id error facere tenetur eaque dolore sit! At dicta necessitatibus modi laborum molestias velit quos, odit eius.</p>
+                                    <p>Facilis magni iusto!</p>
+                                </div>
 
                                 <div class="card-footer">
                                     <img src="brand/logo-short.svg" alt="A!">
